applications/immich/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # For cert manager
  # annotations:                                # Add an annotation indicating the certificate issuer to use.
  #   cert-manager.io/cluster-issuer: ca-issuer # Cluster-wide ClusterIssuer
  name: immichingress
  namespace: immich
spec:
  ingressClassName: traefik                   # K3s default ingress controller
  rules:
  - host: test.homelab.lan            # nip.io allows DNS mapping without editing /etc/hosts
    http:
      paths:
      - backend:
          service:
            name: immich-server              # Make sure to link to the correct service name
            port:
              number: 2283
        path: /
        pathType: Prefix
# For cert manager
  # tls:                                       # Placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  # - hosts:
  #   - immich.192-168-0-37.nip.io
  #   secretName: immich-cert                    # cert-manager will store the new certificate in this secret.
